# Lab_4

./: .gitmodules  CMakeLists.txt
gui/: main.cpp
gui/Controller/: DiffController.hpp  TestController.hpp
gui/Model/: DiffModel.hpp  TestModel.hpp
gui/Panel/: DiffPanel.hpp  TabsPanel.hpp
gui/View/: DiffView.hpp  TestView.hpp
src/Cardinal/: Cardinal.hpp
src/Difference/: Difference.hpp
src/Exception/: Exception.hpp
src/Generator/: Generator.hpp
src/LazySequence/: LazySequence.hpp
src/Optional/: Optional.hpp
src/Stream/: Stream.hpp
src/Test/: TestRunner.cpp  TestRunner.hpp
tests/: DynamicArrayTest.cpp  GeneratorTest.cpp  LazySequenceTest.cpp  ListSequenceTest.cpp  OptionalTest.cpp
